[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Pirate Treasure/Sprites/Red Potion/06.png" type="Texture" id=1]
[ext_resource path="res://Assets/Pirate Treasure/Sprites/Red Potion/07.png" type="Texture" id=2]
[ext_resource path="res://Assets/Pirate Treasure/Sprites/Red Potion/02.png" type="Texture" id=3]
[ext_resource path="res://Assets/Pirate Treasure/Sprites/Red Potion/04.png" type="Texture" id=4]
[ext_resource path="res://Assets/Pirate Treasure/Sprites/Red Potion/01.png" type="Texture" id=5]
[ext_resource path="res://Assets/Pirate Treasure/Sprites/Red Potion/03.png" type="Texture" id=6]
[ext_resource path="res://Assets/Pirate Treasure/Sprites/Red Potion/05.png" type="Texture" id=7]
[ext_resource path="res://Scripts/red-potion.gd" type="Script" id=8]
[ext_resource path="res://Assets/Pirate Treasure/Sprites/Potion Effect/02.png" type="Texture" id=9]
[ext_resource path="res://Assets/Pirate Treasure/Sprites/Potion Effect/01.png" type="Texture" id=10]
[ext_resource path="res://Assets/Pirate Treasure/Sprites/Potion Effect/03.png" type="Texture" id=11]
[ext_resource path="res://Assets/Pirate Treasure/Sprites/Potion Effect/04.png" type="Texture" id=12]
[ext_resource path="res://Sounds/life-potion.mp3" type="AudioStream" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "collected",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[node name="red-potion" type="Area2D"]
collision_layer = 4
script = ExtResource( 8 )

[node name="redpotion" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="drinkAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
attenuation = 2.3128e-05

[connection signal="body_entered" from="." to="." method="_on_items_body_entered"]
[connection signal="animation_finished" from="redpotion" to="." method="_on_redpotion_animation_finished"]
